<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightest_grey"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <!-- Tried to recreate layout of Pandora app with list of radio stations and now playing screens if click on any station -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Purpose: List all of the users available stations based on artist"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:text="@string/radio_stations"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            style="@style/buttonStyle"
            android:text="@string/stations" />

        <Button
            android:id="@+id/browse_button"
            style="@style/buttonStyle"
            android:text="@string/browse" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                style="@style/grey_line">
            </View>

            <LinearLayout
                android:id="@+id/goldroom"
                style="@style/artist_bar">
                <ImageView
                    style="@style/artist_pic"
                    android:src="@drawable/goldroom_album"/>
                <TextView
                    style="@style/main_artist_text"
                    android:text="@string/goldroom"/>
            </LinearLayout>

            <View
                style="@style/grey_line">
            </View>

            <LinearLayout
                android:id="@+id/nora_en_pure"
                style="@style/artist_bar">
                <ImageView
                    style="@style/artist_pic"
                    android:src="@drawable/nora_en_pure_album"/>
                <TextView
                    style="@style/main_artist_text"
                    android:text="@string/nora_en_pure"/>
            </LinearLayout>

            <View
                style="@style/grey_line">
            </View>

            <LinearLayout
                android:id="@+id/rufus_du_sol"
                style="@style/artist_bar">
                <ImageView
                    style="@style/artist_pic"
                    android:src="@drawable/rufus_du_sol_album"/>
                <TextView
                    style="@style/main_artist_text"
                    android:text="@string/rufus_du_sol"/>
            </LinearLayout>

            <View
                style="@style/grey_line">
            </View>

            <LinearLayout
                android:id="@+id/satin_jackets"
                style="@style/artist_bar">
                <ImageView
                    style="@style/artist_pic"
                    android:src="@drawable/satin_jackets_album"/>
                <TextView
                    style="@style/main_artist_text"
                    android:text="@string/satin_jackets"/>
            </LinearLayout>

            <View
                style="@style/grey_line">
            </View>

            <LinearLayout
                android:id="@+id/tycho"
                style="@style/artist_bar">
                <ImageView
                    style="@style/artist_pic"
                    android:src="@drawable/tycho_album"/>
                <TextView
                    style="@style/main_artist_text"
                    android:text="@string/tycho"/>
            </LinearLayout>

            <View
                style="@style/grey_line">
            </View>

            <LinearLayout
                android:id="@+id/odesza"
                style="@style/artist_bar">
                <ImageView
                    style="@style/artist_pic"
                    android:src="@drawable/odesza_album"/>
                <TextView
                    style="@style/main_artist_text"
                    android:text="@string/odesza"/>
            </LinearLayout>

            <View
                style="@style/grey_line">
            </View>

            <LinearLayout
                android:id="@+id/kygo"
                style="@style/artist_bar">
                <ImageView
                    style="@style/artist_pic"
                    android:src="@drawable/kygo_album"/>
                <TextView
                    style="@style/main_artist_text"
                    android:text="@string/kygo"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
